
SET(TARGET_NAME ${push_target})
SET(DESTINATION_NAME ${push_dest})
SET(TARGET_IMPL_NAME ${push_impl})

IF(ENABLE_OPTIONAL_PUSH)
PKG_CHECK_MODULES(platform_pkgs_push REQUIRED push capi-appfw-application)

ADD_DEFINITIONS("-fvisibility=hidden")

INCLUDE_DIRECTORIES(
    ${INCLUDE_COMMON}
    ${application_include}
    ${platform_pkgs_push_INCLUDE_DIRS}
)

SET(CMAKE_INSTALL_RPATH
    ${CMAKE_INSTALL_RPATH}
    ${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${tizen_dest}
    ${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${application_dest}
    ${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME}
)

SET(SRCS_IMPL
    JSPushManager.cpp
    JSPushMessage.cpp
    PushManager.cpp
    PushMessage.cpp
    PushUtil.cpp
)

ADD_LIBRARY(${TARGET_IMPL_NAME} SHARED ${SRCS_IMPL})

TARGET_LINK_LIBRARIES(${TARGET_IMPL_NAME}
    ${LIBS_COMMON}
    ${tizen_impl}
    ${application_impl}
    ${platform_pkgs_push_LIBRARIES}
)

SET(SRCS
    plugin_config.cpp
    plugin_initializer.cpp
)

ADD_LIBRARY(${TARGET_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${TARGET_NAME}
    ${TARGET_IMPL_NAME}
)

INSTALL(TARGETS ${TARGET_NAME} ${TARGET_IMPL_NAME} LIBRARY DESTINATION ${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config.xml DESTINATION ${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME})
ENDIF(ENABLE_OPTIONAL_PUSH)
INSTALL(
        DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${DESTINATION_HEADER_PREFIX}/push
        FILES_MATCHING PATTERN "*.h" PATTERN "CMakeFiles" EXCLUDE
)
