SET(TARGET_NAME ${refimpl_target})
SET(DESTINATION_NAME ${refimpl_dest})
SET(TARGET_IMPL_NAME ${refimpl_impl})

SET(CMAKE_INSTALL_RPATH
	${CMAKE_INSTALL_RPATH}
	${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${tizen_dest}
	${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME}
)

SET(SRCS_IMPL
	JSRefImplManager.cpp
	RefImplManager.cpp
	mock.cpp
	JSSuper.cpp
	JSSub.cpp
	Super.cpp
	Sub.cpp
    NestedValue.cpp
    JSNestedValue.cpp
)

INCLUDE_DIRECTORIES(
	${INCLUDE_COMMON}
)

ADD_LIBRARY(${TARGET_IMPL_NAME} SHARED ${SRCS_IMPL})

TARGET_LINK_LIBRARIES(${TARGET_IMPL_NAME}
	${LIBS_COMMON}
)

SET(SRCS
	plugin_initializer.cpp
)

ADD_LIBRARY(${TARGET_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${TARGET_NAME}
	${TARGET_IMPL_NAME}
)

INSTALL(TARGETS ${TARGET_NAME} ${TARGET_IMPL_NAME} LIBRARY DESTINATION ${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config.xml DESTINATION ${DESTINATION_LIB_PREFIX}/${DESTINATION_NAME})
INSTALL(
        DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${DESTINATION_HEADER_PREFIX}/power
        FILES_MATCHING PATTERN "*.h" PATTERN "CMakeFiles" EXCLUDE
)

add_subdir(test)
