SET(TARGET "timetracer")

SET(SRCS
  TimeTracer.c
)

INCLUDE_DIRECTORIES(
	${TOP}/Common
)

ADD_DEFINITIONS("-DTIME_TRACER_UNIT_MSEC")

ADD_LIBRARY(${TARGET} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${TARGET}
  ${LIBS_COMMON}
)

INSTALL(TARGETS ${TARGET} LIBRARY DESTINATION ${DESTINATION_LIB_PREFIX}/${COMMON_DESTINATION_NAME})
INSTALL(
        DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${DESTINATION_HEADER_PREFIX}/common
        FILES_MATCHING PATTERN "*.h" PATTERN "CMakeFiles" EXCLUDE
)

